07-supply-chain-security/policy/tests/resources/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-app
spec:
  containers:
    - name: app
      image: ghcr.io/mbongowo/devops/supply-chain-demo:1.0.0
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
