07-supply-chain-security/policy/tests/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: supply-chain-validate-policies
policies:
  - ../disallow-latest-tag.yaml
  - ../require-non-root.yaml
resources:
  - resources/good-pod.yaml
  - resources/bad-latest-pod.yaml
  - resources/bad-root-pod.yaml
results:
  # disallow-latest-tag
  - policy: disallow-latest-tag
    rule: require-explicit-tag
    resources: [good-app]
    kind: Pod
    result: pass
  - policy: disallow-latest-tag
    rule: require-explicit-tag
    resources: [bad-latest]
    kind: Pod
    result: fail
  - policy: disallow-latest-tag
    rule: require-explicit-tag
    resources: [bad-root]
    kind: Pod
    result: pass
  # require-run-as-non-root
  - policy: require-run-as-non-root
    rule: run-as-non-root
    resources: [good-app]
    kind: Pod
    result: pass
  - policy: require-run-as-non-root
    rule: run-as-non-root
    resources: [bad-latest]
    kind: Pod
    result: pass
  - policy: require-run-as-non-root
    rule: run-as-non-root
    resources: [bad-root]
    kind: Pod
    result: fail
